# AttentionHub

./: README.md  pyproject.toml
attention/: __init__.py  factorized_attention.py  grouped_query_attention.py  multi_query_attention.py  predict_sparse_attention.py  scaled_dot_product_attention.py
benchmarks/: benchmark_attention.py  scaled_dot_product_attention_bench.py
demo/: facta_exp.py  gqa_exp.py  mqa_exp.py  psa_exp.py  sdpa_exp.py
docs/: dynamic_sparse_attention.md  factorized_attention.md  grouped_query_attention.md  multi_query_attention.md  scaled_dot_product_attention.md
